# SimpleOCR

./: .gitignore  pyproject.toml
