[tool.poetry]
name = "simpleocr"
version = "0.1.0"
description = ""
authors = ["Andrey Muraenko<muraenko@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.9"
pytesseract = "^0.3.8"
numpy = "^1.21.0"
opencv-python = "^4.5.3"
click = "^8.0.1"
poetry = "^1.1.7"
isort = "^5.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
